add start plugin; add stop plugin; add test
